--- a/Backend/.env
+++ b/Backend/.env
@@ -1,3 +1,4 @@
+# DEVELOPMENT
 DB_HOST=localhost
 DB_PORT=5432
 DB_USER=admin
@@ -5,3 +6,4 @@ DB_PASSWORD=admin123
 DB_NAME=mydb
 DATABASE_URL=postgresql://admin:admin123@localhost:5432/mydb
 NODE_ENV=development
+
