--- a/Backend/package.json
+++ b/Backend/package.json
@@ -5,9 +5,12 @@
   "main": "app.ts",
   "scripts": {
     "dev": "nodemon --exec ts-node app.ts",
-    "test": "echo \"Error: no test specified\" && exit 1",
     "migrate": "node-pg-migrate up",
-    "migrate:create": "node-pg-migrate create"
+    "migrate:create": "node-pg-migrate create",
+    "setup:test-db": "ts-node app/scripts/setup-test-db.ts",
+    "test": "NODE_ENV=test jest",
+    "test:watch": "NODE_ENV=test jest --watch",
+    "test:coverage": "NODE_ENV=test jest --coverage"
   },
   "keywords": [],
   "author": "",
@@ -15,6 +18,7 @@
   "description": "",
   "dependencies": {
     "@types/jsonwebtoken": "^9.0.9",
+    "axios": "^1.8.4",
     "bcryptjs": "^3.0.2",
     "dotenv": "^16.4.7",
     "express": "^5.1.0",
@@ -27,10 +31,15 @@
   },
   "devDependencies": {
     "@types/express": "^5.0.1",
+    "@types/jest": "^29.5.14",
     "@types/node": "^22.14.0",
     "@types/node-pg-migrate": "^2.3.1",
     "@types/pg": "^8.11.11",
+    "@types/supertest": "^6.0.3",
     "@types/uuid": "^10.0.0",
+    "jest": "^29.7.0",
+    "supertest": "^7.1.0",
+    "ts-jest": "^29.3.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
   }
