--- a/Backend/tsconfig.json
+++ b/Backend/tsconfig.json
@@ -1,11 +1,20 @@
 {
-    "compilerOptions": {
-      "target": "ES2018",
-      "module": "commonjs", // or "NodeNext" for newer Node versions
-      "esModuleInterop": true,
-      "outDir": "./dist",
-      "rootDir": "./",
-      "strict": true
+  "compilerOptions": {
+    "target": "es6",
+    "module": "commonjs",
+    "strict": true,
+    "esModuleInterop": true,
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true,
+    "outDir": "./dist",
+    "types": ["jest", "node"],
+    "baseUrl": ".",
+    "paths": {
+      "@services/*": ["app/services/*"],
+      "@models/*": ["app/api/*/Models"],
+      "@tests/*": ["app/tests/*"]
     }
-  }
-  
+  },
+  "include": ["app/**/*", "tests/**/*"],
+  "exclude": ["node_modules"]
+}
