add - frontend nextjs

--- a/Backend/.env
+++ b/Backend/.env
@@ -7,3 +7,6 @@ DB_NAME=mydb
 DATABASE_URL=postgresql://admin:admin123@localhost:5432/mydb
 NODE_ENV=development
 
+#JWT
+JWT_SECRET=azzsdllo4534asdazkk7dasd111
+JWT_EXPIRATION=1h
